--- a/project/package.json
+++ b/project/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
+    "@joi/date": "^2.1.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "joi": "^17.5.0",
     "pg": "^8.7.1",
     "sequelize": "^6.12.4",
     "serialize-javascript": "^6.0.0",
