--- a/project/package.json
+++ b/project/package.json
@@ -7,6 +7,10 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "joi": "^17.5.0",
+    "jsonwebtoken": "^8.5.1",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.7.1",
     "sequelize": "^6.12.4",
     "serialize-javascript": "^6.0.0",
