--- a/project/package.json
+++ b/project/package.json
@@ -8,6 +8,7 @@
     "express-session": "^1.17.2",
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.1.6",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -21,7 +22,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -35,6 +36,7 @@
   "homepage": "https://github.com/fenix23707/restaurant#readme",
   "description": "",
   "devDependencies": {
+    "jest": "^27.4.7",
     "nodemon": "^2.0.15"
   }
 }
