--- a/project/package.json
+++ b/project/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@joi/date": "^2.1.0",
+    "amqplib": "^0.8.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "dotenv": "^10.0.0",
