--- a/email-service/package.json
+++ b/email-service/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "amqplib": "^0.8.0",
     "dotenv": "^11.0.0",
+    "express": "^4.18.1",
     "nodemailer": "^6.7.2"
   }
 }
