--- a/project/package.json
+++ b/project/package.json
@@ -4,6 +4,7 @@
     "amqplib": "^0.8.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
