--- a/project-web/package.json
+++ b/project-web/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.3.0",
     "alertify.js": "^1.0.12",
     "alertifyjs": "^1.13.1",
+    "jwt-decode": "^3.1.2",
     "ngx-pagination": "^6.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
